Add Base HTML layout
-Adds the skeleton HTML elements for header, main, footer
-Adds package-lock.json

--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <header class="container">
+        <div class="row">
+          <div class="col-md-6 title"><h1>Tic-Tac-Toe Game</h1></div>
+          <div class="col-md-6 user">User Info</div>
+        </div>
+      </header>
+      <div class="main container mt-4">
+        <div class="row game-board">
+          <div class="col-md-4" id="index-0"></div>
+          <div class="col-md-4" id="index-1"></div>
+          <div class="col-md-4" id="index-2"></div>
+          <div class="col-md-4" id="index-3"></div>
+          <div class="col-md-4" id="index-4"></div>
+          <div class="col-md-4" id="index-5"></div>
+          <div class="col-md-4" id="index-6"></div>
+          <div class="col-md-4" id="index-7"></div>
+          <div class="col-md-4" id="index-8"></div>
+        </div>
+      </div>
+      <footer class="fixed-bottom">
+        <div class="row">
+          <div class="col-md-4">Play Again</div>
+          <div class="col-md-4">Challenge A Friend!</div>
+          <div class="col-md-4">High Scores!</div>
+        </div>
+      </footer>
     </body>
 </html>
