--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       </header>
       <div class="main container mt-4">
         <div class="row game-board">
-          <div class="col-md-4" id="index-0"></div>
-          <div class="col-md-4" id="index-1"></div>
-          <div class="col-md-4" id="index-2"></div>
-          <div class="col-md-4" id="index-3"></div>
-          <div class="col-md-4" id="index-4"></div>
-          <div class="col-md-4" id="index-5"></div>
-          <div class="col-md-4" id="index-6"></div>
-          <div class="col-md-4" id="index-7"></div>
-          <div class="col-md-4" id="index-8"></div>
+          <div class="game col-md-4" id="index-0"></div>
+          <div class="game col-md-4" id="index-1"></div>
+          <div class="game col-md-4" id="index-2"></div>
+          <div class="game col-md-4" id="index-3"></div>
+          <div class="game col-md-4" id="index-4"></div>
+          <div class="game col-md-4" id="index-5"></div>
+          <div class="game col-md-4" id="index-6"></div>
+          <div class="game col-md-4" id="index-7"></div>
+          <div class="game col-md-4" id="index-8"></div>
         </div>
       </div>
       <footer class="fixed-bottom">
