Adds player info space to screen
-Adds player X to left of gameboard
-Adds player O to right of gameboard

--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
     <body>
       <header class="container">
         <div class="row">
-          <div class="col-md-6 title"><h1>Tic-Tac-Toe Game</h1></div>
+          <div class="col-md-6 title"><h1>Tic-Tac-Snow</h1></div>
           <div class="col-md-6 user">User Info</div>
         </div>
       </header>
+      <aside class="player-x">
+        Player <span class="x"><strong>X</strong></span>
+      </aside>
+      <aside class="player-o">
+        Player <span class="o"><strong>O</strong></span>
+      </aside>
       <div class="main container mt-4">
         <div class="row game-board">
-          <div class="game col-md-4" id="index-0"></div>
-          <div class="game col-md-4" id="index-1"></div>
-          <div class="game col-md-4" id="index-2"></div>
-          <div class="game col-md-4" id="index-3"></div>
-          <div class="game col-md-4" id="index-4"></div>
-          <div class="game col-md-4" id="index-5"></div>
-          <div class="game col-md-4" id="index-6"></div>
-          <div class="game col-md-4" id="index-7"></div>
-          <div class="game col-md-4" id="index-8"></div>
+          <div class="game col-4" id="index-0"></div>
+          <div class="game col-4" id="index-1"></div>
+          <div class="game col-4" id="index-2"></div>
+          <div class="game col-4" id="index-3"></div>
+          <div class="game col-4" id="index-4"></div>
+          <div class="game col-4" id="index-5"></div>
+          <div class="game col-4" id="index-6"></div>
+          <div class="game col-4" id="index-7"></div>
+          <div class="game col-4" id="index-8"></div>
         </div>
       </div>
       <footer class="fixed-bottom">
