--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
       </header>
       <aside class="player-x">
-        Player <span class="x"><strong>X</strong></span>
+        <div class="player-x-title">Player <span class="x">X</span></div>
       </aside>
       <aside class="player-o">
-        Player <span class="o"><strong>O</strong></span>
+        <div class="player-o-title">Player <span class="o">O</span></div>
       </aside>
       <div class="main container mt-4">
         <div class="row game-board">
