Adds some basic function to 'play again' button
-Play again button clears board
-Play again button resets currentGame array to empty strings
-Play again button resets currentTurn variable to 1

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <footer class="fixed-bottom">
         <div class="row">
-          <div class="col-md-4">Play Again</div>
+          <div class="play-again-button col-md-4">Play Again</div>
           <div class="col-md-4">Challenge A Friend!</div>
           <div class="col-md-4">High Scores!</div>
         </div>
