Updates class of user-message

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="col-md-6 user">User Info</div>
         </div>
       </header>
-      <section class="user-alerts"></section>
+      <section class="user-message"></section>
       <aside class="player-x">
         <div class="player-x-title">Player <span class="x">X</span></div>
       </aside>
