Adds Sign Up form
-Adds Sign Up form to html
-Remove aside width and height to clean up visuals.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
           <div class="col-md-6 user">User Info</div>
         </div>
       </header>
+
+      <form class="" action="index.html" method="post">
+        <input name="credentials[email]" type="email" placeholder="email">
+        <input name="credentials[password]" type="password" placeholder="password">
+        <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation">
+        <input type="submit" value="Sign Up">
+      </form>
+
       <section class="user-message"></section>
       <aside class="player-x">
         <div class="player-x-title">Player <span class="x">X</span></div>
