Updates HTML with sign-up form ID

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </header>
 
-      <form class="" action="index.html" method="post">
+      <form id="sign-up-form">
         <input name="credentials[email]" type="email" placeholder="email">
         <input name="credentials[password]" type="password" placeholder="password">
         <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation">
