Adds working sign-in form
-Adds sign in form to html
-Adds working curl script
-Adds sign in event handler to app.js
-Adds onSignIn event in events.js and stores token in store.js
-Adds user message update on sign in success/failure
-Adds api request to api.js

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <input type="submit" value="Sign Up">
       </form>
 
+      <form id="sign-in-form">
+        <input type="email" name="credentials[email]" placeholder="email">
+        <input name="credentials[password]" type="password" placeholder="password">
+        <input type="submit" value="Sign In">
+      </form>
+
       <section class="user-message"></section>
       <aside class="player-x">
         <div class="player-x-title">Player <span class="x">X</span></div>
