Adds working change password form
-Adds change password form to HTML
-Adds change password form event handler to api.js
-Adds Successful and failed event to events.js
-Adds functioning api request and response
-Adds functioning user message updates in ui.js

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <input type="submit" value="Sign In">
       </form>
 
+      <form id="change-password-form">
+        <input type="password" name="passwords[old]" placeholder="current password">
+        <input type="password" name="passwords[new]" placeholder="new password">
+        <input type="submit" value="Change Password">
+      </form>
+
       <section class="user-message"></section>
       <aside class="player-x">
         <div class="player-x-title">Player <span class="x">X</span></div>
