Adds sign out form and working curl scripts
-Adds sign out form to html
-Adds working sign out curl script

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <input type="submit" value="Change Password">
       </form>
 
+      <form id="sign-out">
+        <input type="submit" value="Sign Out">
+      </form>
+
       <section class="user-message"></section>
       <aside class="player-x">
         <div class="player-x-title">Player <span class="x">X</span></div>
