Adds jquery method to reset all forms on submit

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
         </div>
       </header>
 
-      <form id="sign-up-form">
+      <form id="sign-up-form" class="auth-form">
         <input name="credentials[email]" type="email" placeholder="email">
         <input name="credentials[password]" type="password" placeholder="password">
         <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation">
         <input type="submit" value="Sign Up">
       </form>
 
-      <form id="sign-in-form">
+      <form id="sign-in-form" class="auth-form">
         <input type="email" name="credentials[email]" placeholder="email">
         <input name="credentials[password]" type="password" placeholder="password">
         <input type="submit" value="Sign In">
       </form>
 
-      <form id="change-password-form">
+      <form id="change-password-form" class="auth-form">
         <input type="password" name="passwords[old]" placeholder="current password">
         <input type="password" name="passwords[new]" placeholder="new password">
         <input type="submit" value="Change Password">
