Adjusts bootstrap settings

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <body>
       <header class="container">
         <div class="row">
-          <div class="col-md-6 title"><h1>Tic-Tac-Snow</h1></div>
-          <div class="col-md-6 user">User Info</div>
+          <div class="col-6 title"><h1>Tic-Tac-Snow</h1></div>
+          <div class="col-6 user">User Info</div>
         </div>
       </header>
 
@@ -64,9 +64,9 @@
       </div>
       <footer class="fixed-bottom">
         <div class="row">
-          <div class="play-again-button col-md-4">Play Again</div>
-          <div class="col-md-4">Challenge A Friend!</div>
-          <div class="col-md-4">High Scores!</div>
+          <div class="play-again-button col-4">Play Again</div>
+          <div class="col-4">Challenge A Friend!</div>
+          <div class="col-4">High Scores!</div>
         </div>
       </footer>
     </body>
