Adds ID to Play again button
-Adds ID to Play Again button
-Adds border around footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <footer class="fixed-bottom">
         <div class="row">
-          <div class="play-again-button col-4">Play Again</div>
+          <div class="activate col-4" id="activate">Play Game</div>
           <div class="col-4">Challenge A Friend!</div>
           <div class="col-4">High Scores!</div>
         </div>
