Adds update to user message
-If not signed in, alerts user to sign in or sign up

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <input type="submit" value="Sign Out">
       </form>
 
-      <section class="user-message"></section>
+      <section class="user-message">Sign Up or Sign In to Play!</section>
       <aside class="player-x">
         <div class="player-x-title">Player <span class="x">X</span></div>
       </aside>
