--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
         <div class="player-o-title">Player <span class="o">O</span></div>
       </aside>
       <div class="main container mt-4">
-        <div class="row game-board">
-          <div class="game col-4" id="index-0"></div>
-          <div class="game col-4" id="index-1"></div>
-          <div class="game col-4" id="index-2"></div>
-          <div class="game col-4" id="index-3"></div>
-          <div class="game col-4" id="index-4"></div>
-          <div class="game col-4" id="index-5"></div>
-          <div class="game col-4" id="index-6"></div>
-          <div class="game col-4" id="index-7"></div>
-          <div class="game col-4" id="index-8"></div>
+        <div class="game-board row">
+          <div class="game col-4 blank" id="index-0"></div>
+          <div class="game col-4 blank" id="index-1"></div>
+          <div class="game col-4 blank" id="index-2"></div>
+          <div class="game col-4 blank" id="index-3"></div>
+          <div class="game col-4 blank" id="index-4"></div>
+          <div class="game col-4 blank" id="index-5"></div>
+          <div class="game col-4 blank" id="index-6"></div>
+          <div class="game col-4 blank" id="index-7"></div>
+          <div class="game col-4 blank" id="index-8"></div>
         </div>
       </div>
       <footer class="fixed-bottom">
