Adds working 'get games' button
-Adds button to request total games played
-Adds api request to display total number of games played.
-Adds ui update to show the number of games.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <header class="container">
         <div class="row">
           <div class="col-6 title"><h1>Tic-Tac-Snow</h1></div>
-          <div class="col-6 user">User Info</div>
+          <div class="col-6 user">User Info
+            <br>
+            <button type="button" name="total-games" id="total-games">Get Games</button>
+            <br>
+            <div class="games-message"></div>
+          </div>
         </div>
       </header>
 
