Adds update to play again button
-Play again button is now the entire footer
-Changed play again to blue and larger font.

--- a/index.html
+++ b/index.html
@@ -83,11 +83,7 @@
         </div>
       </div>
       <footer class="fixed-bottom">
-        <div class="row">
-          <div class="activate col-4" id="activate">Play Game</div>
-          <div class="col-4">Challenge A Friend!</div>
-          <div class="col-4">High Scores!</div>
-        </div>
+          <div class="activate" id="activate">Play Game</div>
       </footer>
     </body>
 </html>
