--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <body>
       <header class="container">
         <div class="row">
-          <div class="col-4 title"><h1>Tic-Tac-Snow</h1></div>
-          <div class="col-8 user">
+          <div class="col-xs-6 col-sm-6 title"><h1>Tic-Tac-Snow</h1></div>
+          <div class="col-xs-6 col-sm-6 user">
             <br>
               <div class="btn-group">
                 <button type="button" class="btn btn-primary dropdown-toggle sign-in-up-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
