Adds color variables and labels for change pw
-Adds color variables to css page
-Adds labels to form fields in change pw form

--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
                   </form>
                 </div>
               </div>
-              <button class="btn btn-info" type="button" name="total-games" id="total-games">Get Games</button>
+              <button class="btn btn-primary" type="button" name="total-games" id="total-games">Get Games</button>
               <div class="btn-group">
                 <button type="button" class="btn btn-primary dropdown-toggle user-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Change Password
                 </button>
                 <div class="dropdown-menu">
                   <form id="change-password-form" class="auth-form">
-                    <input class="dropdown-item" type="password" name="passwords[old]" placeholder="current password">
-                    <input class="dropdown-item" type="password" name="passwords[new]" placeholder="new password">
+                    <label for="current-password">Current Password</label>
+                    <input id="current-password" class="dropdown-item" type="password" name="passwords[old]" placeholder="current password">
+                    <label for="new-password">New Password</label>
+                    <input id="new-password" class="dropdown-item" type="password" name="passwords[new]" placeholder="new password">
                     <button class="btn btn-primary" type="submit">Change Password</button>
                   </form>
                 </div>
