Moves footer off of bottom of page to under board

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           <div class="game col-4 blank" id="index-8"></div>
         </div>
       </div>
-      <footer class="fixed-bottom">
-          <div class="activate" id="activate">Play Game</div>
+      <footer>
+          <div class="activate" id="activate">New Game</div>
       </footer>
     </body>
 </html>
