Removes some border, makes a tic-tac-toe board

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   </form>
                 </div>
               </div>
-              <button class="btn btn-primary" type="button" name="total-games" id="total-games">Get Games</button>
+              <button class="btn btn-primary" type="button" name="total-games" id="total-games">Total Games</button>
               <div class="btn-group">
                 <button type="button" class="btn btn-primary dropdown-toggle user-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Change Password
