--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="col-xs-6 col-sm-6 user">
             <br>
               <div class="btn-group dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle sign-in-up-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn btn-primary dropdown-toggle sign-in-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sign In
                 </button>
                 <div class="sign-in-dd dropdown-menu dropdown-menu-right">
@@ -27,12 +27,12 @@
                     <input id="sign-in-email" class="dropdown-item" type="email" name="credentials[email]" placeholder="email">
                     <label for="sign-in-password">Password</label>
                     <input id="sign-in-password" class="dropdown-item" name="credentials[password]" type="password" placeholder="password">
-                    <button class="btn btn-primary sign-in-dd-button" type="submit">Sign In</button>
+                    <button class="btn btn-primary" type="submit">Sign In</button>
                   </form>
                 </div>
               </div>
               <div class="btn-group dropdown">
-                <button type="button" class="btn btn-success dropdown-toggle sign-in-up-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn btn-success dropdown-toggle sign-up-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sign Up
                 </button>
                 <div class="sign-up-dd dropdown-menu">
